edited the radio buttons on the task/show page so that that the button and name are correctly aligned

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -811,3 +811,8 @@ button {
 .notice {
   color: #32CD32 !important;
 }
+
+.task-show-approve-request-label {
+  padding: 0px;
+  color: white;
+}
